--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "tailwindcss": ">=0.5.3",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.9"
     }
 }
