--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 UPTIME_MONITOR_SLACK_WEBHOOK_URL=
+
+
+SLACK_KEY=
+SLACK_SECRET=
+SLACK_REDIRECT_URI=
