--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
+        "lint": "standard",
+        "lint:fix": "standard --fix",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
@@ -10,7 +12,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "laravel-mix-purgecss": "^2.2.0",
@@ -20,6 +22,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "standard": "^14.3.1",
         "tailwindcss": ">=0.5.3",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.9"
